cathaysia.nix4vscode.6d0f1428c6c33ae84a8e2c7b805a950263f900b3
Running as unit: run-p1668660-i14248768.scope; invocation ID: 17dc5643251a4ffd8aac65dd58b5ed7e
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
   Compiling autocfg v1.5.0
    Checking cfg-if v1.0.1
    Checking memchr v2.7.5
    Checking pin-project-lite v0.2.16
    Checking smallvec v1.15.1
   Compiling serde_core v1.0.228
    Checking futures-core v0.3.31
    Checking itoa v1.0.15
   Compiling lock_api v0.4.13
   Compiling parking_lot_core v0.9.11
    Checking bytes v1.10.1
    Checking stable_deref_trait v1.2.0
    Checking once_cell v1.21.3
    Checking scopeguard v1.2.0
   Compiling serde v1.0.228
   Compiling quote v1.0.40
    Checking futures-sink v0.3.31
    Checking mio v1.0.4
    Checking signal-hook-registry v1.4.5
    Checking socket2 v0.6.0
   Compiling syn v2.0.104
    Checking parking_lot v0.12.4
    Checking log v0.4.27
   Compiling shlex v1.3.0
    Checking futures-channel v0.3.31
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
   Compiling cc v1.2.27
    Checking futures-io v0.3.31
    Checking slab v0.4.10
    Checking tracing-core v0.1.34
    Checking zeroize v1.8.1
    Checking fnv v1.0.7
    Checking litemap v0.8.0
    Checking http v1.3.1
    Checking writeable v0.6.1
    Checking rustls-pki-types v1.12.0
    Checking getrandom v0.2.16
   Compiling num-traits v0.2.19
    Checking percent-encoding v2.3.1
   Compiling httparse v1.10.1
   Compiling ident_case v1.0.1
   Compiling icu_normalizer_data v2.0.0
    Checking untrusted v0.9.0
    Checking http-body v1.0.1
   Compiling strsim v0.11.1
   Compiling icu_properties_data v2.0.1
   Compiling heck v0.5.0
    Checking try-lock v0.2.5
    Checking base64 v0.22.1
    Checking tower-service v0.3.3
    Checking want v0.3.1
   Compiling rustls v0.23.28
    Checking socket2 v0.5.10
    Checking aho-corasick v1.1.3
   Compiling ring v0.17.14
   Compiling serde_json v1.0.145
    Checking regex-syntax v0.8.5
   Compiling thiserror v2.0.12
    Checking ipnet v2.11.0
    Checking ryu v1.0.20
    Checking subtle v2.6.1
    Checking form_urlencoded v1.2.1
    Checking sync_wrapper v1.0.2
    Checking utf8_iter v1.0.4
    Checking tower-layer v0.3.3
   Compiling time-core v0.1.4
    Checking adler2 v2.0.1
   Compiling num-conv v0.1.0
    Checking powerfmt v0.2.0
    Checking openssl-probe v0.1.6
    Checking rustls-native-certs v0.8.1
    Checking deranged v0.4.0
    Checking regex-automata v0.4.9
   Compiling time-macros v0.2.22
   Compiling synstructure v0.13.2
   Compiling darling_core v0.21.3
    Checking miniz_oxide v0.8.9
    Checking num-integer v0.1.46
    Checking bitflags v2.10.0
    Checking webpki-roots v1.0.1
    Checking rustls-webpki v0.103.3
    Checking crc32fast v1.4.2
   Compiling vcpkg v0.2.15
   Compiling pkg-config v0.3.32
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling tokio-macros v2.5.0
   Compiling serde_derive v1.0.228
   Compiling displaydoc v0.2.5
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
    Checking zerovec v0.11.2
    Checking tokio v1.47.1
   Compiling futures-macro v0.3.31
   Compiling tracing-attributes v0.1.30
    Checking zerotrie v0.2.2
    Checking futures-util v0.3.31
   Compiling darling_macro v0.21.3
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
    Checking tracing v0.1.41
    Checking icu_provider v2.0.0
   Compiling darling v0.21.3
   Compiling thiserror-impl v2.0.12
    Checking utf8parse v0.2.2
    Checking icu_properties v2.0.1
    Checking icu_normalizer v2.0.0
    Checking iri-string v0.7.8
    Checking idna_adapter v1.2.1
    Checking idna v1.0.3
    Checking time v0.3.41
    Checking anstyle-parse v0.2.7
   Compiling libsqlite3-sys v0.33.0
   Compiling regex v1.11.1
    Checking serde_urlencoded v0.7.1
    Checking url v2.5.4
    Checking flate2 v1.1.2
    Checking futures-executor v0.3.31
    Checking num-bigint v0.4.6
    Checking http-body-util v0.1.3
   Compiling anyhow v1.0.100
    Checking colorchoice v1.0.4
   Compiling either v1.15.0
    Checking anstyle-query v1.1.3
    Checking iana-time-zone v0.1.63
   Compiling diesel_derives v2.3.4
    Checking anstyle v1.0.11
    Checking is_terminal_polyfill v1.70.1
    Checking winnow v0.7.11
    Checking chrono v0.4.41
    Checking anstream v0.6.19
   Compiling dsl_auto_type v0.2.0
    Checking futures v0.3.31
   Compiling lazy-regex-proc_macros v3.4.1
    Checking simple_asn1 v0.6.3
    Checking toml_datetime v0.7.0
   Compiling serde_with_macros v3.15.1
    Checking hyper v1.6.0
    Checking tokio-util v0.7.15
    Checking tokio-rustls v0.26.2
    Checking async-compression v0.4.25
   Compiling async-stream-impl v0.3.6
    Checking tower v0.5.2
   Compiling pin-project-internal v1.1.10
   Compiling snafu-derive v0.8.6
    Checking hyper-util v0.1.14
    Checking tower-http v0.6.6
   Compiling diesel_table_macro_syntax v0.3.0
    Checking pem v3.0.5
   Compiling termcolor v1.4.1
    Checking toml_parser v1.0.1
    Checking toml_writer v1.0.2
    Checking lazy_static v1.5.0
    Checking equivalent v1.0.2
    Checking clap_lex v0.7.5
    Checking hashbrown v0.15.4
    Checking clap_builder v4.5.48
    Checking sharded-slab v0.1.7
   Compiling ts-rs-macros v11.1.0
    Checking indexmap v2.10.0
    Checking snafu v0.8.6
    Checking jsonwebtoken v9.3.1
    Checking hyper-rustls v0.27.7
    Checking reqwest v0.12.23
    Checking hyper-timeout v0.5.2
    Checking pin-project v1.1.10
    Checking lazy-regex v3.4.1
    Checking serde_with v3.15.1
    Checking async-stream v0.3.6
    Checking itertools v0.14.0
    Checking serde_path_to_error v0.1.17
    Checking serde_spanned v1.0.0
   Compiling async-trait v0.1.88
   Compiling clap_derive v4.5.47
    Checking matchers v0.2.0
    Checking tracing-log v0.2.0
    Checking secrecy v0.10.3
    Checking thread_local v1.1.9
    Checking nu-ansi-term v0.50.1
    Checking downcast-rs v2.0.2
    Checking web-time v1.1.0
    Checking arc-swap v1.7.1
    Checking tracing-subscriber v0.3.20
    Checking octocrab v0.47.1
    Checking toml v0.9.4
    Checking clap v4.5.48
    Checking ts-rs v11.1.0
    Checking toml_edit v0.23.2
    Checking code-api v0.0.11 (/tmp/nix-shell.uUVugk/cathaysia_nix4vscode_xso5ah9e/crates/code_api)
    Checking dotenvy v0.15.7
    Checking nix32 v0.0.11 (/tmp/nix-shell.uUVugk/cathaysia_nix4vscode_xso5ah9e/crates/nix32)
    Checking diesel v2.3.3
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.3/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
